[package]
name = "hopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1.19", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
thiserror = "1.0"
hopper_macros = { path = "./macros" }
