[package]
name = "hopper"
version = "0.2.1"
edition = "2021"

[profile.release]
debug = 0
strip = "symbols"
lto = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros", "io-util"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
byteorder = "1.4"
thiserror = "1.0"
hopper_macros = { path = "./macros" }
log = "0.4"
simple_logger = "2.1"
bytes = "1"
