[package]
name = "hopper"
version = "0.5.3"
edition = "2021"

[features]
zerocopy = ["libc"]

[profile.release]
debug = 0
strip = "symbols"
lto = true

[dependencies]
netherite = "0.1.1"

async-trait = "0.1"
tokio = { version = "1.19", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time", "signal"] }
influxdb2 = { version = "0.2" }
config = { version = "0.13", default-features = false, features = ["toml"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
futures = "0.3"
byteorder = "1.4"
thiserror = "1.0"
log = "0.4"
simple_logger = "2.3"
uuid = { version = "1.1" }
md5 = { version = "0.7" } 
hostname = "0.3"
proxy-protocol = "0.5.0" 
tokio-util = { version = "0.7.8", features = ["codec"] }
bytes = "1.4.0"
libc = { version = "0.2.147", optional = true }
